# operating-systems-code

./: README.md
Concurrency and locks/: CMakeLists.txt  README.md  compute_pi.cpp  queue_lock.cpp  semaphore_lock.cpp  ticket_spin_lock.cpp  ticket_yield_lock.cpp
Producer and dining Philosophy/: CMakeLists.txt  README.md  circular.cpp  compile.sh  condition_var.cpp  hold_and_wait.cpp  semaphore.cpp
kernel-security/: Makefile  README.md  process_monitor.c  syscall_integrity.c
memory virtualization/: CMakeLists.txt  README.md  replacement.cpp  translation.cpp
processes and scheduling/: CMakeLists.txt  README.md  processes.cpp  scheduler.cpp
